Fix linebreaks in jsdoc-default.css

--- a/Tools/jsdoc/cesium_template/static/styles/jsdoc-default.css
+++ b/Tools/jsdoc/cesium_template/static/styles/jsdoc-default.css
@@ -24,14 +24,16 @@ body {
 code {
   margin: 0;
   padding: 0;
-  font-family: Consolas, "Liberation Mono", Menlo, "Courier New", Courier,
-    Monaco, monospace;
+  font-family:
+    Consolas, "Liberation Mono", Menlo, "Courier New", Courier, Monaco,
+    monospace;
   font-size: 12px;
 }
 
 #ClassList > ul > li {
-  font-family: Consolas, "Liberation Mono", Menlo, "Courier New", Courier,
-    Monaco, monospace;
+  font-family:
+    Consolas, "Liberation Mono", Menlo, "Courier New", Courier, Monaco,
+    monospace;
   word-break: break-all;
 }
 
@@ -302,8 +304,9 @@ div.nav li {
 }
 
 div.nav h5 {
-  font-family: Consolas, "Liberation Mono", Menlo, "Courier New", Courier,
-    Monaco, monospace;
+  font-family:
+    Consolas, "Liberation Mono", Menlo, "Courier New", Courier, Monaco,
+    monospace;
   margin-top: 12px;
   border-bottom: 1px solid #ccc;
 }
@@ -359,8 +362,9 @@ footer {
   background-color: #f4f4ff;
   margin: 0;
   border-bottom: 1px solid #ccc;
-  font-family: Consolas, "Liberation Mono", Menlo, "Courier New", Courier,
-    Monaco, monospace;
+  font-family:
+    Consolas, "Liberation Mono", Menlo, "Courier New", Courier, Monaco,
+    monospace;
 }
 
 #mainIndex .page-title {
@@ -452,8 +456,9 @@ h6 {
   font-weight: normal;
 }
 .nameContainer .name {
-  font-family: Consolas, "Liberation Mono", Menlo, "Courier New", Courier,
-    Monaco, monospace;
+  font-family:
+    Consolas, "Liberation Mono", Menlo, "Courier New", Courier, Monaco,
+    monospace;
 }
 
 .details {
